fixes to align text btns resopsivness

--- a/styles/basics/mq.css
+++ b/styles/basics/mq.css
@@ -281,7 +281,7 @@
     background-color: rgb(197, 189, 43);
     align-items: center;
     justify-content: center;
-    width: 6.8em;
+    width: 6.9em;
     height: 4em;
     border-radius: 4.375em;
     gap: 3em;
@@ -687,7 +687,7 @@
     background-color: rgb(161, 43, 0);
     align-items: center;
     justify-content: center;
-    width: 8.1em;
+    width: 7.5em;
     height: 3.6em;
     border-radius: 4.375em;
     border: none;
@@ -708,7 +708,7 @@
     background-color: rgb(0, 161, 134);
     align-items: center;
     justify-content: center;
-    width: 8.1em;
+    width: 7.5em;
     height: 3.6em;
     border-radius: 4.375em;
     border: none;
@@ -729,7 +729,7 @@
     background-color: rgb(125, 0, 59);
     align-items: center;
     justify-content: center;
-    width: 8.1em;
+    width: 7.5em;
     height: 3.6em;
     border-radius: 4.375em;
     border: none;
